Updated Templates fixed login and register

--- a/templates/is_logged_in.html
+++ b/templates/is_logged_in.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
+    <h2>Home</h2>
+    <!-- Make a button for login and when pressed it goes to login.html and do the same with register -->
     <nav>
-        <h2>Home</h2>
         <a href="/login">Login</a>
         <a href="/register">Register</a>
-        <a href="/users">View User</a>
-        <a href="/change_password">change_password</a>
-        <a href="/logout">Logout</a>
-    </nav>
-
 </body>
 </html>
