--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2>Login</h2>
-    <form method="post" action="/login/">
+    <form method="post" action="/login">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <br>
