--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h1>Hello WORLD</h1>
-    
-    <h2>Advert Packages:</h2>
-    <ul>
-        {% for package in packages %}
-            <li>{{package.package_name}}</li>
-        {% endfor %}
-    </ul>
+    <nav>
+        <h2>Home</h2>
+        <a href="/login">Login</a>
+        <a href="/register">Register</a>
+    </nav>
 
-    <p>Email: {{ user.email }}</p>
-    <p>Credits: {{ user.credits }}</p>
+
 
 </body>
 </html>
