--- a/templates/login.html
+++ b/templates/login.html
@@ -9,14 +9,18 @@
 </head>
 <body>
     <h2>Login</h2>
-    <form method="post" action="/login">
+    <form method="post" action="/login_form" id="loginForm">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
         <br>
-        <button type="submit">Login</button>
+        <button type="submit" class="login" onclick="submitForm()">Login</button>
     </form>
+    <script>
+
+
+    </script>
 </body>
 </html>
