--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
         <br>
-        <button type="submit" class="login" onclick="submitForm()">Login</button>
+        <button type="submit">Login</button>
     </form>
     <script>
 
