--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-    <nav>
-        <h2>Home</h2>
+    <div>
+        <nav>
+        <a href="/" class="home"><h2>Home</h2></a>
         <a href="/users">View User</a>
+        <a href="/store">Store</a>
         <a href="/change_password">change_password</a>
         <a href="/logout">Logout</a>
     </nav>
+    </div>
 
 </body>
 </html>
+
