--- a/static/styles.css
+++ b/static/styles.css
@@ -1,12 +1,60 @@
-nav{
-    color: black;
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-bar {
+    background-color: #333;
+    color: white;
+    padding: 15px;
     text-align: center;
-    padding: 1rem;
 }
 
-nav a{
-    color: black;
+.nav-bar a {
+    color: red;
     text-decoration: none;
-    padding: 1rem;
+    margin: 0 15px;
+    font-size: 16px;
 }
 
+h1 {
+    text-align: center;
+    color: #333;
+}
+
+h2 div{
+    color: wheat;
+}
+
+p {
+    color: #666;
+}
+
+form {
+    margin-top: 10px;
+}
+
+button {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+/* Responsive Styles */
+@media (max-width: 600px) {
+    .nav-bar {
+        flex-direction: column;
+    }
+
+    .nav-bar a {
+        margin: 10px 0;
+    }
+}
