--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -6,8 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Change Password</title>
+    <link rel="stylesheet" href="../static/styles.css">
+
 </head>
 <body>
+    <nav class="nav-bar">
+        <a href="/"><h2>Home</h2></a>
+        <a href="/users">View User</a>
+        <a href="/store">Store</a>
+        <a href="/change_password">change_password</a>
+        <a href="/logout">Logout</a>
+    </nav>  
     <h2>Change Password</h2>
     <form method="post" action="/change_password">
         <label for="current_password">Current Password:</label>
