--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -11,11 +11,10 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <a href="/"><h2>Home</h2></a>
-        <a href="/users">View User</a>
-        <a href="/store">Store</a>
-        <a href="/change_password">change_password</a>
-        <a href="/logout">Logout</a>
+        <a href="/" class="home"><h2>Home</h2></a>
+        <a href="/users/">View User</a>
+        <a href="/store/">Store</a>
+        <a href="/logout/">Logout</a>
     </nav>  
     <h2>Change Password</h2>
     <form method="post" action="/change_password">
