--- a/templates/cars.html
+++ b/templates/cars.html
@@ -4,27 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
-<body>
+<body class="cars">
     {% for car in cars %}
-        <div>
-            <h2>{{ car.car.Marke }} {{ car.car.Modelis }}</h2>
-            <p>Telefono nr: {{ car.car.Telefono_nr }}</p>
-            <p>Kontakto vardas: {{ car.car.Kontakto_vardas }}</p>
-            <p>Miestas: {{ car.car.Miestas }}</p>
-            <p>Kaina: {{ car.car.Kaina }}</p>
-            <p>Metai: {{ car.car.Metai }}</p>
-            <p>Pirma registracija: {{ car.car.Pirma_registracija }}</p>
-            <p>Variklis: {{ car.car.Variklis }}</p>
-            <p>Kebulas: {{ car.car.Kebulas }}</p>
-            <p>Ratai: {{ car.car.Ratai }}</p>
-            <p>Klimatas: {{ car.car.Klimatas }}</p>
-            <p>Defektai: {{ car.car.Defektai }}</p>
-            <p>Rida: {{ car.car.Rida }}</p>
-            <p>Kuras: {{ car.car.Kuras }}</p>
-            <p>Deze: {{ car.car.Deze }}</p>
-            <p>Spalva: {{ car.car.Spalva }}</p>
+    <a href="../cars/{{ car.Skelbimo_id }}">
+        <div class="card">
+            <img src="/static/Skelbimu_images/{{ car.Skelbimo_id }}/1.jpg" alt="Car Image">
+            <h2>{{ car.Marke }} {{ car.Modelis }}</h2>
+            <p>Telefono nr: {{ car.Telefono_nr }}</p>
+            <p>Miestas: {{ car.Miestas }}</p>
+            <p>Kaina: {{ car.Kaina }} €</p>
+            <p>Metai: {{ car.Metai }}</p>
+            <p>Variklis: {{ car.Variklis }}</p>
+            <p>Kebulas: {{ car.Kebulas }}</p>
+            <p>Rida: {{ car.Rida }} km</p>
         </div>
+    </a>
     {% endfor %}
 </body>
 </html>
