--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
         <nav class="nav-bar">
         <div>
             {% if user %}
-                <p>Logged in as: {{ user }}</p>
+                <b>Logged in as: {{ user }}</b>
             {% endif %}
         </div>
             <a href="/" class="home"><h2>Home</h2></a>
