--- a/static/styles.css
+++ b/static/styles.css
@@ -1,51 +1,55 @@
+/* Reset styles */
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: rgba(0, 0, 0, 0.307);
 }
 
+/* Navigation bar */
 .nav-bar {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: #333;
     color: white;
-    padding: 15px;
-    text-align: center;
+    padding: 10px 20px;
 }
 
 .nav-bar a {
-    color: red;
     text-decoration: none;
-    margin: 0 15px;
-    font-size: 16px;
+    color: #fff;
+    margin: 0 10px;
 }
 
+/* Heading styles */
 h1 {
     text-align: center;
     color: #333;
 }
 
-h2 div{
-    color: wheat;
+/* Default text color */
+div, p {
+    color: black;
 }
 
-p {
-    color: #666;
-}
-
+/* Form styles */
 form {
     margin-top: 10px;
 }
 
+/* Button styles */
 button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 15px;
+    background-color: #333;
+    color: #fff;
     border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #707070;
 }
 
 /* Responsive Styles */
@@ -57,4 +61,233 @@ button:hover {
     .nav-bar a {
         margin: 10px 0;
     }
+}
+
+/* Change password section */
+.change_password, .store, .user, .login, .break, .register {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 20px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.new_password, .submit_password {
+    padding: 10px;
+    margin-top: 15px;
+}
+
+/* User section */
+.user {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+}
+
+.user h2 {
+    color: #333;
+}
+
+.user li {
+    list-style-type: none;
+    margin-bottom: 10px;
+}
+
+/* Link styles */
+a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #0069D9;
+}
+
+/* Center aligned text */
+.middle {
+    text-align: center;
+}
+
+b {
+    color: gray;
+}
+
+/* Container styles */
+.container {
+    margin: 0 auto;
+}
+
+.balance {
+    color: gray; /* Adjust color */
+}
+
+/* Package styles */
+.package {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    background-color: #ffffff;
+}
+
+.owned {
+    color: green;
+}
+
+
+.adjusted-div {
+    border: 1px solid #ddd;
+    padding: 15px;
+    margin: 10px;
+    width: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.adjusted-div h2 {
+    color: #333;
+}
+
+.adjusted-div p {
+    margin: 8px 0;
+}
+
+/* Add media query for responsiveness */
+@media (max-width: 600px) {
+    .adjusted-div {
+        width: 100%;
+    }
+}
+
+.card {
+    border: 1px solid #ddd;
+    padding: 22px;
+    margin: 5px;
+    width: 280px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    background-color: rgb(230, 230, 230);
+    border: 1px solid #00000064;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+.card img {
+    max-width: 100%;
+    width: 400px;
+    height: 200px; /* Adjust the height as per your requirement */
+    object-fit: cover;
+    box-shadow: grey 5px 5px 20px 5px;
+    
+}
+
+.card h2 {
+    color: #333;
+}
+
+.card p {
+    margin: 8px 0;
+}
+
+/* Add media query for responsiveness */
+@media (max-width: 600px) {
+    .card {
+        width: 100%;
+    }
+
+    .card img {
+        max-width: 100%; /* Adjust for smaller screens */
+        object-fit: cover;
+    }
+}
+
+.cars{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.login-page {
+    background-image: url(../static/login_images/image.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.register-page{
+    background-image: url(../static/login_images/nauja.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+.login, .register{
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+div.login, div.register{
+    display: block;
+    font-family: 'Kanit', sans-serif;
+    font-size: 17px;
+    width: 250px;
+    box-shadow: 5px 5px 50px 5px rgba(0, 0, 0, 0.8);
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-page button, .register-page button{
+    margin-top: 10px;
+}
+
+.login-page label, .register-page label{
+    margin-top: 10px;
+}
+
+input{
+    border: 2px solid #000000;
+    background-color: rgba(255, 255, 255, 0.55);
+    height: 25px;
+}
+
+.car-images {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Ensure that images outside the container are hidden */
+}
+
+.car-images img.slide {
+    width: 500px; /* Adjust the width as per your requirement */
+    height: 400px; /* Adjust the height as per your requirement */
+    object-fit: cover;
+}
+
+.controls {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.car-info {
+    text-align: center;
 }
