--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -16,15 +16,15 @@
         <a href="/store/">Store</a>
         <a href="/logout/">Logout</a>
     </nav>  
-    <h2>Change Password</h2>
-    <form method="post" action="/change_password">
+    <h2 class="middle">Change Password</h2>
+    <form class="change_password" method="post" action="/change_password">
         <label for="current_password">Current Password:</label>
         <input type="password" id="current_password" name="current_password" required>
         <br>
-        <label for="new_password">New Password:</label>
+        <label class="new_password" for="new_password">New Password:</label>
         <input type="password" id="new_password" name="new_password" required>
         <br>
-        <button type="submit">Change Password</button>
+        <button class="submit_password" type="submit">Change Password</button>
     </form>
 </body>
 </html>
