--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <nav>
+    <nav class="nav-bar">
         <h2>Home</h2>
         <a href="/login">Login</a>
         <a href="/register">Register</a>
