--- a/templates/register.html
+++ b/templates/register.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
 </head>
-<body>
-    <!-- Create register form that links with my auth.py -->
-    <h2>Register</h2>
-    <form method="post" action="/register">
-        <br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <br>    
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <button type="submit">Register</button>
+<body class="register-page">
+    <div class="register">
+        <form method="post" action="/register">
+            <label for="email">EMAIL</label>
+            <input type="email" id="email" name="email" required>
+            <label for="password">PASSWORD</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Register</button>
+    </div>
 </body>
 </html>
