--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,4 @@
-<!-- FILEPATH: /Users/osvaldasgapsys/Desktop/BackEndBandymas-master/templates/home.html -->
-<!-- BEGIN: abpxx6d04wxr -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,19 +21,94 @@
         </nav>
     </div>
 
-        <select id="carMakeSelect"></select>
-        <button type="submit" onclick="search()">Search</button>
-
+    <select id="carMakeSelect" onchange="fetchAndPopulateModels()">
+    </select>
+    <select id="carModelSelect">
+        <option value="all">-</option>
+    </select>
+    <select id="carPriceSelectFrom">
+        <option value="all">-</option>
+        <option value="500">500</option>
+        <option value="1000">1000</option>
+        <option value="5000">5000</option>
+        <option value="10000">10000</option>
+        <option value="20000">20000</option>
+        <option value="50000">50000</option>
+    </select>
+    <select id="carPriceSelectTo">
+        <option value="all">-</option>
+        <option value="500">500</option>
+        <option value="1000">1000</option>
+        <option value="5000">5000</option>
+        <option value="10000">10000</option>
+        <option value="20000">20000</option>
+        <option value="50000">50000</option>
+    </select>
+    <select id="carMileageSelectFrom">
+        <option value="all">-</option>
+        <option value="50000">50000</option>
+        <option value="100000">100000</option>
+        <option value="200000">200000</option>
+        <option value="300000">300000</option>
+    </select>
+    <select id="carMileageSelectTo">
+        <option value="all">-</option>
+        <option value="50000">50000</option>
+        <option value="100000">100000</option>
+        <option value="200000">200000</option>
+        <option value="300000">300000</option>
+    </select>
+    <select id="carYearSelectFrom">
+        <option value="all">-</option>
+    </select>
+    <select id="carYearSelectTo">
+        <option value="all">-</option>
+    </select>
+    
+    
+    
+    <button type="submit" onclick="search()">Search</button>
 
     <script>
+        function populateYearSelect() {
+            var selectElementFrom = document.getElementById("carYearSelectFrom");
+            var selectElementTo = document.getElementById("carYearSelectTo");
+            var currentYear = new Date().getFullYear();
+            var startYear = 1980;
+    
+            for (var year = startYear; year <= currentYear; year++) {
+                var optionFrom = document.createElement("option");
+                optionFrom.value = year;
+                optionFrom.text = year;
+                selectElementFrom.appendChild(optionFrom);
+    
+                var optionTo = document.createElement("option");
+                optionTo.value = year;
+                optionTo.text = year;
+                selectElementTo.appendChild(optionTo);
+            }
+        }
+        populateYearSelect();
         async function fetchCarMakes() {
             try {
                 const response = await fetch('cars/makes');
                 const jsonData = await response.json();
-                
+
                 return jsonData;
             } catch (error) {
                 console.error('Error fetching car makes:', error);
+            }
+        }
+
+        async function fetchCarModels(make) {
+            try {
+                const response = await fetch('cars/models/?make=' + make);
+                const jsonData = await response.json();
+                console.log(jsonData)
+
+                return jsonData;
+            } catch (error) {
+                console.error('Error fetching car models:', error);
             }
         }
 
@@ -49,12 +123,79 @@
                     option.text = car.Marke;
                     selectElement.appendChild(option);
                 });
+                fetchAndPopulateModels();
+            }
+        }
+
+        async function fetchAndPopulateModels() {
+            var selectedMake = document.getElementById("carMakeSelect").value;
+            const carModels = await fetchCarModels(selectedMake);
+            var selectElement = document.getElementById("carModelSelect");
+            selectElement.innerHTML = "";
+
+            var defaultOption = document.createElement("option");
+            defaultOption.value = "all";
+            defaultOption.text = "-";
+            selectElement.appendChild(defaultOption);
+
+            if (carModels) {
+                carModels.forEach(function (model) {
+                    var option = document.createElement("option");
+                    option.value = model.Modelis;
+                    option.text = model.Modelis.toUpperCase();
+                    selectElement.appendChild(option);
+                });
             }
         }
 
         function search() {
             var selectedMake = document.getElementById("carMakeSelect").value;
-            window.location.href = "cars/?car_make=" + selectedMake;
+            var selectedModel = document.getElementById("carModelSelect").value;
+            var selectedPriceFrom = document.getElementById("carPriceSelectFrom").value;
+            var selectedPriceTo = document.getElementById("carPriceSelectTo").value;
+            var selectedMileageFrom = document.getElementById("carMileageSelectFrom").value;
+            var selectedMileageTo = document.getElementById("carMileageSelectTo").value;
+            var selectedYearFrom = document.getElementById("carYearSelectFrom").value;
+            var selectedYearTo = document.getElementById("carYearSelectTo").value;
+        
+            var url;
+            if (selectedModel == "all") 
+            {
+                url = "cars/?car_make=" + selectedMake;
+            } 
+            else 
+            {
+                url = "cars/?car_make=" + selectedMake + "&car_model=" + selectedModel;
+            }
+            a = console.log(url)
+            addParameterIfExists(url, "price_from", selectedPriceFrom);
+            console.log(url)
+            addParameterIfExists(url, "price_to", selectedPriceTo);
+            addParameterIfExists(url, "mileage_from", selectedMileageFrom);
+            addParameterIfExists(url, "mileage_to", selectedMileageTo);
+            addParameterIfExists(url, "year_from", selectedYearFrom);
+            addParameterIfExists(url, "year_to", selectedYearTo);
+        
+            fetch(url)
+                .then(response => {
+                    if (response.status === 200) {
+                        window.location.href = url;
+                    } else if (response.status === 403) {
+                        alert("You do not own this package!");
+                    } else {
+                        alert("An error occurred: " + response.status);
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                });
+        }
+        
+        function addParameterIfExists(url, paramName, paramValue) {
+            if (paramValue) {
+                url += "&" + paramName + "=" + paramValue;
+            }
+            
         }
         populateSelect();
     </script>
