--- a/templates/user.html
+++ b/templates/user.html
@@ -17,6 +17,7 @@
             <a href="/" class="home"><h2>Home</h2></a>
             <a href="/users/">View User</a>
             <a href="/store/">Store</a>
+            <a href="../store/buycredits/">Buy Credits</a>
             <a href="/logout/">Logout</a>
         </nav>  
     </header>
