--- a/templates/store.html
+++ b/templates/store.html
@@ -20,6 +20,7 @@
             <a href="/" class="home"><h2>Home</h2></a>
             <a href="/users/">View User</a>
             <a href="/store/">Store</a>
+            <a href="../store/buycredits/">Buy Credits</a>
             <a href="/logout/">Logout</a>
         </nav>  
         <div class="store">
@@ -38,67 +39,9 @@
                     {% endif %}
                 </div>
             {% endfor %}
-        <div class="creditstore">
-            <form method="post" action="./buycredits/" onsubmit="event.preventDefault(); buyCredits(event)">
-                <select name="credits">
-                    <option value="500">500</option>
-                    <option value="1000">1000</option>
-                    <option value="2000">2000</option>
-                    <option value="5000">5000</option>
-                </select>
-                <button type="submit">Buy Credits</button>
-            </form>
+
         </div>
-            <script>
-                async function buyCredits(event) {
-                    let form = event.target;
-                    let formData = new FormData(form);
-                    let url = form.action;
-                    let request = new Request(url, {
-                        method: 'POST',
-                        body: formData
-                    });
-                    try {
-                        const response = await fetch(request);
-                        if (response.status === 200) {
-                            const data = await response.json();
-                            console.log(data.message);
-                        }
-                        location.reload();
-                    } catch (error) {
-                        console.log(error);
-                    }
-                }
-                async function buyPackage(event) {
-                    let form = event.target;
-                    let formData = new FormData(form);
-                    let packageId = formData.get('package_id');
-                    let buyButton = document.getElementById('buyButton');
-                    let url = `/store/${packageId}`;
-                    let request = new Request(url, {
-                        method: 'POST',
-                        body: formData
-                    });
-                    try {
-                        const response = await fetch(request);
-                        if (response.status === 403) {
-                            alert("You don't have enough credits.");
-                        } else {
-                            const data = await response.json();
-                            console.log(data);
-                            if (data.message == "Package bought successfully") {
-                                buyButton.remove();
-                                let p = document.createElement('p');
-                                p.innerText = "Already Owned";
-                                form.appendChild(p);
-                            }
-                            location.reload(); // Refresh the page
-                        }
-                    } catch (error) {
-                        console.log(error);
-                    }
-                }
-            </script>
+            <script src="../static/scripts/scripts_store.js"></script>
         </div>
     </div>
 </body>
