--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -17,14 +17,17 @@
         <a href="/logout/">Logout</a>
     </nav>  
     <h2 class="middle">Change Password</h2>
-    <form class="change_password" method="post" action="/change_password">
+    <form class="change_password" method="post" action="/change_password" id="changePasswordForm">
         <label for="current_password">Current Password:</label>
         <input type="password" id="current_password" name="current_password" required>
         <br>
         <label class="new_password" for="new_password">New Password:</label>
-        <input type="password" id="new_password" name="new_password" required>
+        <input type="password" id="new_password1" name="new_password1" required>
+        <label class="new_password" for="new_password">Repeat New Password:</label>
+        <input type="password" id="new_password2" name="new_password2" required>
         <br>
         <button class="submit_password" type="submit">Change Password</button>
     </form>
 </body>
+<script src="../static/scripts/scripts_change_pw.js"></script>
 </html>
