--- a/static/styles.css
+++ b/static/styles.css
@@ -386,3 +386,16 @@ label{
     margin-top: 10px;   
     padding: 5px;
 }
+
+.creditStore{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    background-color: #ffffff;
+    color: #000000;
+}
