--- a/templates/car.html
+++ b/templates/car.html
@@ -24,7 +24,7 @@
         <div class="car">
             <div class="car-images">
                 {% for i in range(1, num_of_pictures + 1) %}
-                <img src="/static/Skelbimu_images/{{ car.Skelbimo_id }}/{{ i }}.jpg" alt="Car Image" class="slide">
+                <img src="/static/Skelbimu_images/{{ car.advert_id }}/{{ i }}.jpg" alt="Car Image" class="slide">
                 {% endfor %}
             </div>
             <div class="controls">
@@ -34,14 +34,14 @@
                 <button onclick="pauseSlideshow()">Pause</button>
             </div>
             <div class="car-info">
-                <h2>{{ car.Marke }} {{ car.Modelis }}</h2>
-                <p>Telefono nr: {{ car.Telefono_nr }}</p>
-                <p>Miestas: {{ car.Miestas }}</p>
-                <p>Kaina: {{ car.Kaina }} €</p>
-                <p>Metai: {{ car.Metai }}</p>
-                <p>Variklis: {{ car.Variklis }}</p>
-                <p>Kebulas: {{ car.Kebulas }}</p>
-                <p>Rida: {{ car.Rida }} km</p>
+                <h2>{{ car.make }} {{ car.model }}</h2>
+                <p>Phone Number: {{ car.phone_number }}</p>
+                <p>City: {{ car.city }}</p>
+                <p>Price: {{ car.price }} €</p>
+                <p>Year: {{ car.year }}</p>
+                <p>Engine Type: {{ car.engine_type }}</p>
+                <p>Body Type: {{ car.body_type }}</p>
+                <p>Mileage: {{ car.mileage }} km</p>
             </div>
         </div>
     </div>
